--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -23,6 +23,12 @@
    "metadata": {},
    "source": [
     "## Categorical Encodings\n",
+    "1. Label Encoding\n",
+    "2. One Hot Encoding\n",
+    "3. Count Encoding\n",
+    "4. Target Encoding\n",
+    "5. Singular Value Decomposition\n",
+    "\n",
     "[Kaggle's Categorical Encodings](https://www.kaggle.com/matleonard/categorical-encodings)\n",
     "\n",
     "[Kaggle's Categorical Encodings: Exercise](https://www.kaggle.com/aubreyjohn/exercise-categorical-encodings/edit)"
@@ -32,7 +38,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Generation"
+    "## Feature Generation\n",
+    "[Kaggle's Baseline Model](https://www.kaggle.com/matleonard/baseline-model)\n",
+    "\n",
+    "[Kaggle's Baseline Model: Exercise](https://www.kaggle.com/matleonard/baseline-model)"
    ]
   },
   {
